# PhotoShare-RestApi-

./: .env.example  .gitignore  Procfile  README.md  dependencies_auth.py  main.py  pyproject.toml  requirements.txt  test.db
src/: alembic.ini  docker-compose.yml  test.db
src/auth/: dependencies_auth.py  models_auth.py
src/auth/templates/: verify_email.html
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/migration/: env.py
src/migration/versions/: 200be077785c_init.py  ef0cd8757c12_init.py
src/migrations/: env.py
src/postgres-data/: postmaster.pid
src/postgres-data/base/13481/: pg_internal.init
src/postgres-data/base/16384/: 1247  1249  1259  1259_fsm  1259_vm  16415  16418  16420  16428  16429  16431  16438  16439  16441  16443  16445  16453  16454  16456  16458  16465  16478  16486  16487  16494  16502  16503  16510  16516  16531  16543  16550  2224  2579  2604  2606  2608  2610  2620  2656  (+21 more)
src/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/postgres-data/pg_xact/: 0000
src/repository/: comment.py  photo.py  tags.py  user.py
src/routes/: admin.py  comment.py  moderator.py  photo.py  routes_auth.py  transformation_photo.py  user.py
src/schemas/: ban_schemas.py  coment_schemas.py  photo_schemas.py  photoshare.py  rating_schemas.py  schemas_auth.py  tag_schemas.py  user_schemas.py
src/service/: create_qr_code.py
src/templates/: base.html  change_photo.html  create_photo.html  delete_photo.html  home.html
src/templates/1/: author.html  base1.html  create_author.html  create_quote.html  create_tag.html  login.html  tag_search.html
src/tests/: conftest.py  logger.py  test.db  test_1.py  test_auth.py  test_comments.py  test_conect_to_db.py  test_photo.py  test_unit_repository_comments.py  test_user.py
tests/: test_auth.py
