[tool.poetry]
name = "photoshare-restapi-"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Oleksandr Arshynov <oleksandrarshynov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
cloudinary = "^1.40.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
qrcode = "^7.4.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.5.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.2.0"


[tool.pytest.ini_options]
addopts = "--cov=<photoshare-restapi-> --cov-report html"
pythonpath = ["."]

[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["src/tests"]
filterwarnings = "ignore::DeprecationWarning"